--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <div class="section method">
             <h2>Concact</h2>
             <br>
-            If you have any question related to this IJCV SI, please contact <a href="">Tae-Hyun Oh</a>, <a href="">Shiqi Yang</a>, or <a href="">Zhixiang Wang</a>.
+            If you have any question related to this IJCV SI, please contact Tae-Hyun Oh, Shiqi Yang, or Zhixiang Wang.
         </div>
 
 </body>
