--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
             <li> <a href="https://lightchaserx.github.io/">Zhixiang Wang</a>: CyberAgent AI Lab, Japan, <a href = "mailto:  wangzx1994@gmail.com"> wangzx1994@gmail.com</a></li>
 
-            <li>  <a href="https://stulyakov.com/">Stavros Petridis</a>: Snap Inc, US, <a href = "mailto: stulyakov@snap.com">stulyakov@snap.com</a></li>
+            <li>  <a href="https://stulyakov.com/">Sergey Tulyakov</a>: Snap Inc, US, <a href = "mailto: stulyakov@snap.com">stulyakov@snap.com</a></li>
 
             <li>  <a href="https://ibug.doc.ic.ac.uk/people/spetridis">Stavros Petridis</a>: Meta and Imperial College London, UK, <a href = "mailto: stavrosp@meta.com">stavrosp@meta.com</a></li>
 
