--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="section abstract">
             <h2>Submission Guidelines</h2>
             <br>
-            <p><link rel="Official site" href="https://link.springer.com/journal/11263/updates/27726868"></p>
+            <p><a href="https://link.springer.com/journal/11263/updates/27726868">Official site</a></p>
         </div>
 
         <div class="section abstract">
