--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
         <div class="section abstract">
             <h2>Important Dates</h2>
             <br>
-            <li>Manuscript submission deadline: 		Mar. 15, 2025</li>
-            <li>First review notification: 				May 25, 2025</li>
+            <li>Manuscript submission deadline: 		<del>Mar. 15, 2025</del>to be extended</li>
+            <li>First review notification: 				<del>May 25, 2025</del>to be extended</li>
             <li>Revised manuscript submission: 		Jul. 10, 2025</li>
             <li>Final review notification: 				Aug. 10, 2025</li>
             <li>Final manuscript submission: 			Sep. 20, 2025</li>
@@ -94,7 +94,7 @@
 
             <li>  <a href="https://vicky.kalogeiton.info/">Vicky Kalogeiton</a>: Ecole Polytechnique, IP Paris, France, <a href = "mailto: vicky.kalogeiton@polytechnique.edu">vicky.kalogeiton@polytechnique.edu</a></li>
 
-            <li>  <a href="http://faculty.ucmerced.edu/mhyang">Ming-Hsuan Yang</a> : University of California, Merced, US and Yonsei University, South Korea, <a href = "mailto: mhyang@ucmerced.edu">mhyang@ucmerced.edu</a></li>
+            <li>  <a href="http://faculty.ucmerced.edu/mhyang">Ming-Hsuan Yang</a>: University of California, Merced, US and Yonsei University, South Korea, <a href = "mailto: mhyang@ucmerced.edu">mhyang@ucmerced.edu</a></li>
 
         </div>
 
