--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
         <div class="section abstract">
             <h2>Important Dates</h2>
             <br>
-            <li>Manuscript submission deadline: 		<del>Mar. 15, 2025</del>to be extended</li>
-            <li>First review notification: 				<del>May 25, 2025</del>to be extended</li>
+            <li>Manuscript submission deadline: 		<del>Mar. 15, 2025</del> <span style="color: red;">to be extended</span></li>
+            <li>First review notification: 				<del>May 25, 2025</del> <span style="color: red;">to be extended</span></li>
             <li>Revised manuscript submission: 		Jul. 10, 2025</li>
             <li>Final review notification: 				Aug. 10, 2025</li>
             <li>Final manuscript submission: 			Sep. 20, 2025</li>
