--- a/index.html
+++ b/index.html
@@ -64,8 +64,15 @@
         <div class="section abstract">
             <h2>Submission Guidelines</h2>
             <br>
-            <p><a href="https://link.springer.com/journal/11263/updates/27726868">Official site</a></p>
+            <p>Refer to the <a href="https://link.springer.com/journal/11263/updates/27726868">Official site</a></p>
+            <div style="color: blueviolet;">
+            <h3>FQA</h2>
+                <li><b>Q</b>: Will you accept conference extention? <b>A</b>: Yes. Conference-based extended papers are expected to have a minimum of 30% additional scientific contribution, e.g., in the form of new or improved algorithms or analysis, new experiments or qualitative/quantitative comparisons. As long as it is noted in the submission that the paper is extended from a conference paper, these should be fine.</li>
+                <li><b>Q</b>: Will audio-visual learning (discriminative learning rather than generation) suitable for the special issue? <b>A</b>: Yes. We welcome submissions from relevant topics.</li>
+            </div>
         </div>
+
+
 
         <div class="section abstract">
             <h2>Important Dates</h2>
