--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
         <div class="section abstract">
             <h2>Important Dates</h2>
             <br>
-            <li>Manuscript submission deadline: 		<del>Mar. 15, 2025</del> <span style="color: red;">to be extended</span></li>
-            <li>First review notification: 				<del>May 25, 2025</del> <span style="color: red;">to be extended</span></li>
+            <li>Manuscript submission deadline: 		<del>Mar. 15, 2025</del> <span style="color: red;">April 15, 2025</span></li>
+            <li>First review notification: 				<del>May 25, 2025</del> <span style="color: red;">to be finalized</span></li>
             <li>Revised manuscript submission: 		Jul. 10, 2025</li>
             <li>Final review notification: 				Aug. 10, 2025</li>
             <li>Final manuscript submission: 			Sep. 20, 2025</li>
@@ -89,7 +89,7 @@
         <div class="section abstract">
             <h2>Guest Editors</h2>
             <br>
-            <li>  <a href="https://ami.postech.ac.kr/members/tae-hyun-oh">Tae-Hyun Oh</a>: Pohang University of Science and Technology (POSTECH), South Korea, <a href = "mailto: thoh.kaist.ac.kr@gmail.com">thoh.kaist.ac.kr@gmail.com</a></li>
+            <li>  <a href="https://ami.postech.ac.kr/members/tae-hyun-oh">Tae-Hyun Oh</a>: KAIST, South Korea, <a href = "mailto: thoh.kaist.ac.kr@gmail.com">thoh.kaist.ac.kr@gmail.com</a></li>
 
             <li>  <a href="https://www.shiqiyang.xyz/">Shiqi Yang</a>: SB Intuitions, SoftBank, Japan, <a href = "mailto: shiqi.yang@sbintuitions.co.jp">shiqi.yang@sbintuitions.co.jp</a></li>
 
@@ -97,7 +97,7 @@
 
             <li>  <a href="https://stulyakov.com/">Sergey Tulyakov</a>: Snap Inc, US, <a href = "mailto: stulyakov@snap.com">stulyakov@snap.com</a></li>
 
-            <li>  <a href="https://ibug.doc.ic.ac.uk/people/spetridis">Stavros Petridis</a>: Meta and Imperial College London, UK, <a href = "mailto: stavrosp@meta.com">stavrosp@meta.com</a></li>
+            <li>  <a href="https://ibug.doc.ic.ac.uk/people/spetridis">Stavros Petridis</a>: Meta and Imperial College London, UK, <a href = "mailto: stavros.petridis04@imperial.ac.uk">stavros.petridis04@imperial.ac.uk</a></li>
 
             <li>  <a href="https://vicky.kalogeiton.info/">Vicky Kalogeiton</a>: Ecole Polytechnique, IP Paris, France, <a href = "mailto: vicky.kalogeiton@polytechnique.edu">vicky.kalogeiton@polytechnique.edu</a></li>
 
