--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <div class="section abstract">
             <h2>Guest Editors</h2>
             <br>
-            <li>  <a href="https://ami.postech.ac.kr/members/tae-hyun-oh">Tae-Hyun Oh</a>: KAIST, South Korea, <a href = "mailto: thoh.kaist.ac.kr@gmail.com">thoh.kaist.ac.kr@gmail.com</a></li>
+            <li>  <a href="https://ami.kaist.ac.kr/">Tae-Hyun Oh</a>: KAIST, South Korea, <a href = "mailto: thoh.kaist.ac.kr@gmail.com">thoh.kaist.ac.kr@gmail.com</a></li>
 
             <li>  <a href="https://www.shiqiyang.xyz/">Shiqi Yang</a>: SB Intuitions, SoftBank, Japan, <a href = "mailto: shiqi.yang@sbintuitions.co.jp">shiqi.yang@sbintuitions.co.jp</a></li>
 
