--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <div id="content">
     <div id="content-inner">
 
-        <center><img src="./img/IJCV_LOGO-1.png" border="0" width="99.5%"><br>
+        <center><img src="./25IJCV//img/IJCV_LOGO-1.png" border="0" width="99.5%"><br>
             <!--            Left: The specification of the proposed 100-Driver for distracted driver classification. Right: The comparisons of different datasets.-->
         </center>
 
@@ -35,7 +35,19 @@
             <h1> Audio-Visual Generation</h1>
         </div>
 
+        <div class="section abstract" style="background-color: rgba(255, 127, 227, 0.443); padding: 10px;  border-radius: 10px;">
+            <h2>Update! Call for Reviewer</h2>
+            <br>
+            <p>We're looking for experienced reviewers to help shape the latest research in this exciting domain! If you’re interested, please fill out this form: [<a href="https://docs.google.com/forms/d/e/1FAIpQLSfOaD_RJ8EbSqy6lh8yl7pfLrRiEPZe4KcKvPGFRBtIOb-f4g/viewform">link</a>]
+                </p></div>
 
+        <div class="section abstract">
+            <!-- <h2>Flyer</h2> -->
+            <!-- <br> -->
+            <embed src="./25IJCV/flyer.pdf" width="100%" height="600px" style="border: none;">
+        </div>
+
+                
         <div class="section abstract">
             <h2>Introduction</h2>
             <br>
@@ -60,12 +72,11 @@
             </li>
         </div>
 
-
         <div class="section abstract">
             <h2>Submission Guidelines</h2>
             <br>
             <p>Refer to the <a href="https://link.springer.com/journal/11263/updates/27726868">Official site</a></p>
-            <div style="color: blue;">
+            <div style="background-color:rgb(255, 253, 127); padding: 10px;  border-radius: 10px;">
             <h3>FQA</h2>
                 <li><b>Q</b>: Will you accept conference extention? <b>A</b>: Yes. Conference-based extended papers are expected to have a minimum of 30% additional scientific contribution, e.g., in the form of new or improved algorithms or analysis, new experiments or qualitative/quantitative comparisons. As long as it is noted in the submission that the paper is extended from a conference paper, these should be fine.</li>
                 <li><b>Q</b>: Will audio-visual learning (discriminative learning rather than generation) suitable for the special issue? <b>A</b>: Yes. We welcome submissions from relevant topics.</li>
@@ -78,7 +89,7 @@
             <h2>Important Dates</h2>
             <br>
             <li>Manuscript submission deadline: 		<del>Mar. 15, 2025</del> <span style="color: red;">April 15, 2025</span></li>
-            <li>First review notification: 				<del>May 25, 2025</del> <span style="color: red;">to be finalized</span></li>
+            <li>First review notification due: 				<del>May 25, 2025</del> <span style="color: red;">June 25, 2025</span></li>
             <li>Revised manuscript submission: 		Jul. 10, 2025</li>
             <li>Final review notification: 				Aug. 10, 2025</li>
             <li>Final manuscript submission: 			Sep. 20, 2025</li>
