--- a/index.html
+++ b/index.html
@@ -26,13 +26,14 @@
 <div id="content">
     <div id="content-inner">
 
-        <center><img src="./25IJCV//img/IJCV_LOGO-1.png" border="0" width="99.5%"><br>
-            <!--            Left: The specification of the proposed 100-Driver for distracted driver classification. Right: The comparisons of different datasets.-->
-        </center>
+        <!-- <center>
+            <img src="./25IJCV//img/IJCV_LOGO-1.png" border="0" width="99.5%"><br>
+        </center> -->
 
         <div class="section head">
-            <h1> Call for Papers: IJCV Special Issue</h1>
-            <h1> Audio-Visual Generation</h1>
+            <img src="./25IJCV//img/IJCV_LOGO-1.png" width="100%"><br>
+            <h1> Call for Papers and Reviewers: IJCV Special Issue</h1>
+            <h1> on Audio-Visual Generation</h1>
         </div>
 
         <div class="section abstract" style="background-color: rgba(255, 127, 227, 0.443); padding: 10px;  border-radius: 10px;">
