--- a/index.html
+++ b/index.html
@@ -36,10 +36,16 @@
             <h1> on Audio-Visual Generation</h1>
         </div>
 
-        <div class="section abstract" style="background-color: rgba(255, 127, 227, 0.443); padding: 10px;  border-radius: 10px;">
+        <div class="section abstract" style="background-color: blueviolet; color: white; padding: 10px;  border-radius: 10px;">
             <h2>Update! Call for Reviewer</h2>
             <br>
-            <p>We're looking for experienced reviewers to help shape the latest research in this exciting domain! If you’re interested, please fill out this form: [<a href="https://docs.google.com/forms/d/e/1FAIpQLSfOaD_RJ8EbSqy6lh8yl7pfLrRiEPZe4KcKvPGFRBtIOb-f4g/viewform">link</a>]
+            <p>We're looking for experienced reviewers to help shape the latest research in this exciting domain! If you’re interested, please fill out this form: [<a href="https://docs.google.com/forms/d/e/1FAIpQLSfOaD_RJ8EbSqy6lh8yl7pfLrRiEPZe4KcKvPGFRBtIOb-f4g/viewform" style="color: white;">link</a>]
+                </p></div>
+
+        <div class="section abstract" style="background-color: rgb(130, 6, 103); color:white; padding: 10px;  border-radius: 10px;">
+            <h2>Update! Additional Extension</h2>
+            <br>
+            <p>Upon request, we have extended the submission deadline to <b>May 2, 2025</b>. However, papers submitted early will be processed on a rolling basis. We look forward to receiving your submission!</p>
                 </p></div>
 
         <div class="section abstract">
@@ -89,7 +95,7 @@
         <div class="section abstract">
             <h2>Important Dates</h2>
             <br>
-            <li>Manuscript submission deadline: 		<del>Mar. 15, 2025</del> <span style="color: red;">April 15, 2025</span></li>
+            <li>Manuscript submission deadline: 		<del>Mar. 15, 2025</del> <del>April 15, 2025</del> <span style="color: red;">May 02, 2025</span></li>
             <li>First review notification due: 				<del>May 25, 2025</del> <span style="color: red;">June 25, 2025</span></li>
             <li>Revised manuscript submission: 		Jul. 10, 2025</li>
             <li>Final review notification: 				Aug. 10, 2025</li>
