--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
 
       <div>
-        <a href="./25ICCV/index.html" class="about-btn-2" style="font-size: large;">ICCV 2025</a>
+        <a href="./iccv25.html" class="about-btn-2" style="font-size: large;">ICCV 2025</a>
         <a href="./25IJCV/index.html" class="about-btn-2" style="font-size: large">IJCV</a>
 		<a href="https://sites.google.com/view/avgenl" class="about-btn-2 inactive" style="font-size: large;">ECCV 2024</a>
       </div>
