--- a/iccv25.html
+++ b/iccv25.html
@@ -111,7 +111,7 @@
       <p id="sub-heading" class="mb-2 pb-0">2nd International Workshop</p>
       <p id="sub-sub-heading" class="mb-2 pb-0">In Conjunction with ICCV 2025, Honolulu, USA</p>
       <div>
-        <!-- <a href="./25ICCV/index.html" class="about-btn-2" style="font-size: large;">ICCV 2025</a> -->
+        <a href="./index.html" class="about-btn-3" style="font-size: large;">Home</a>
          <!-- <span style="font-size: large">  Past Event </span> -->
         <a href="./25IJCV/index.html" class="about-btn-2" style="font-size: large">IJCV</a>
 		<a href="https://sites.google.com/view/avgenl" class="about-btn-2 inactive" style="font-size: large;">ECCV 2024</a>
