--- a/iccv25.html
+++ b/iccv25.html
@@ -169,6 +169,11 @@
           <b>CALL FOR PAPERS</b><br>
            We will call for extended abstract submission of works already accepted by previous top conferences or unpublished works. 
           Additionally, we will invite accepted papers from both the main conference (ICCV 2025) and the IJCV special issue on audio-visual generation for the presentations.
+          </p>
+
+          <p class="quote-style-inv" style="color: white">
+          <b>CALL FOR DEMOS</b><br>
+           We will also call for demos from the industry.
               </p>
               </div>
 
