--- a/iccv25.html
+++ b/iccv25.html
@@ -122,7 +122,7 @@
       <div>
         <a href="./index.html" class="about-btn-3" style="font-size: large;">Home</a>
          <!-- <span style="font-size: large">  Past Event </span> -->
-        <a href="./25IJCV/index.html" class="about-btn-2" style="font-size: large">IJCV</a>
+        <a href="./ijcv25.html" class="about-btn-2" style="font-size: large">IJCV</a>
 		<a href="https://sites.google.com/view/avgenl" class="about-btn-2 inactive" style="font-size: large;">ECCV 2024</a>
       </div>
       <br>
