--- a/ijcv25.html
+++ b/ijcv25.html
@@ -298,7 +298,7 @@
                 <img src="assets/img/orgnizers/mh.png" alt="Ming-Hsuan Yang" style="width: 100%;">
                 <div class="details">
                   <h3>Ming-Hsuan Yang</h3>
-                  <p>Professor, UC Merced</p>
+                  <p>Professor, UC Merced; Yonsei University</p>
                 </div>
               </div>
             </a>
