--- a/ijcv25.html
+++ b/ijcv25.html
@@ -100,7 +100,7 @@
           <li><a href="#overview">Overview</a></li>
           <li><a href="#scope">Scopes</a></li>
           <li><a href="#speakers">People</a></li>
-          <li><a href="#speakers">Guidelines</a></li>
+          <li><a href="#guidelines">Guidelines</a></li>
           <li><a href="#agenda">Dates</a></li>
         </ul>
       </nav><!-- #nav-menu-container -->
@@ -180,7 +180,7 @@
       <div class="container">
 
         <div class="section-header">
-          <h2 style="color: #191919">Aim and Scope</h2>
+          <h2 style="color: #191919">Scopes</h2>
         </div>
             <br>
             <li><b>Audio and image/video generation.</b> Physically accurate and coherent audio-video generation models would be a promising way to build comprehensive and efficient world simulators. Audio-driven image/video generation or joint cogeneration is crucial for enabling more immersive and interactive experiences by synchronizing visual outputs with auditory inputs. This subtopic includes joint audio-visual generation, audio-to-image/video translation, and audio guided image/video editing, but not limited to these areas, as long as the techniques serve as promising foundational components.
