--- a/ijcv25.html
+++ b/ijcv25.html
@@ -125,10 +125,10 @@
       <br>
       <!-- <a href="" class="scrollto"><img src="./25IJCV/img/IJCV_LOGO-1.png" alt="IJCV" title=""></a> -->
       <div>
-        <a href="./index.html" class="about-btn-3" style="font-size: large;">Home</a>
+        <a href="./index.html" class="about-btn-3" style="font-size: large;">Main Page</a>
          <!-- <span style="font-size: large">  Past Event </span> -->
-        <a href="./iccv25.html" class="about-btn-2" style="font-size: large">ICCV 2025</a>
-		<a href="https://sites.google.com/view/avgenl" class="about-btn-2 inactive" style="font-size: large;">ECCV 2024</a>
+        <!-- <a href="./iccv25.html" class="about-btn-2" style="font-size: large">ICCV 2025</a> -->
+		<!-- <a href="https://sites.google.com/view/avgenl" class="about-btn-2 inactive" style="font-size: large;">ECCV 2024</a> -->
       </div>
       <br>
     </div>
