--- a/ijcv25.html
+++ b/ijcv25.html
@@ -117,15 +117,15 @@
   <!-- ======= Intro Section ======= -->
   <section id="intro">
     <div class="intro-container" data-aos-delay="100">
+      <!-- <a href="https://link.springer.com/journal/11263"><img src="./25IJCV/img/IJCV.png" alt="IJCV" title="" style="display: block; margin: 10px auto; max-width: 90px;"></a> -->
       <p id="sub-heading" class="mb-2 pb-0">IJCV Special Issue
         on</p>
       <h1 id="dynamic-title" class="mb-2 pb-0" data-title="Audio-Visual Generation">
         <span style="color: #1d3163;"></span>
       </h1>
       <br>
-      <!-- <a href="" class="scrollto"><img src="./25IJCV/img/IJCV_LOGO-1.png" alt="IJCV" title=""></a> -->
       <div>
-        <a href="./index.html" class="about-btn-3" style="font-size: large;">Main Page</a>
+        <a href="./index.html" class="about-btn-3" style="font-size: large;">Back to Main Page</a>
          <!-- <span style="font-size: large">  Past Event </span> -->
         <!-- <a href="./iccv25.html" class="about-btn-2" style="font-size: large">ICCV 2025</a> -->
 		<!-- <a href="https://sites.google.com/view/avgenl" class="about-btn-2 inactive" style="font-size: large;">ECCV 2024</a> -->
