--- a/iccv25.html
+++ b/iccv25.html
@@ -120,7 +120,7 @@
       <br>
       <p id="sub-sub-heading" class="mb-2 pb-0">In Conjunction with ICCV 2025, Honolulu, USA</p>
       <div>
-        <a href="./index.html" class="about-btn-3" style="font-size: large;">Main Page</a>
+        <a href="./index.html" class="about-btn-3" style="font-size: large;">Back to Main Page</a>
          <!-- <span style="font-size: large">  Past Event </span> -->
         <!-- <a href="./ijcv25.html" class="about-btn-2" style="font-size: large">IJCV</a> -->
 		<!-- <a href="https://sites.google.com/view/avgenl" class="about-btn-2 inactive" style="font-size: large;">ECCV 2024</a> -->
