--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       <nav id="nav-menu-container">
         <ul class="nav-menu">
           <li class="menu-active"><a href="index.html">Home</a></li>
-          <li><a href="#overview">Overview</a></li>
+          <li><a href="#overview">About</a></li>
           <li><a href="#speakers">People</a></li>
         </ul>
       </nav><!-- #nav-menu-container -->
@@ -133,13 +133,13 @@
     <section id="coordination" class="section-with-bg">
       <div class="container" id="overview">
         <div class="section-header-inv">
-          <h2 style="font-size:xx-large">Overview</h2>
+          <h2 style="font-size:xx-large">About</h2>
         </div>
         <div class="tab-content row justify-content-center" data-aos-delay="700">
           <p style="color: white">
             In recent years, we have witnessed significant advancements in the field of visual generation which have molded the research landscape. However, in a world where information is conveyed through a rich tapestry of sensory experiences, the fusion of audio and visual modalities has become much more essential for understanding and replicating the intricacies of human perception and diverse real-world applications. Indeed, the integration of audio and visual information has emerged as a critical area of research in computer vision and machine learning, having numerous applications across various domains, from immersive gaming environments to lifelike simulations for medical training, such as multimedia analysis, virtual reality, advertisement and cinematic application. 
             <br> <br>
-            Despite these strong motivations, little attention has been given to research focusing on understanding and generating audio-visual modalities compared to traditional, vision-only approaches and applications. Given the recent prominence of multi-modal foundation models, embracing the fusion of audio and visual data is expected to further advance current research efforts and practical applications within the computer vision community, which makes this workshop an encouraging addition to cummunity that will catalyze advancements in this burgeoning field.
+            Despite these compelling motivations, research dedicated to understanding and generating audio-visual modalities remains relatively underexplored compared to traditional vision-only approaches in our community. Our mission is to foster progress in this promising and impactful domain by inspiring deeper engagement and providing dedicated platforms, such as international workshops, for discussion and the exchange of the latest advancements.
           </p>
         </div>
       </div>
@@ -149,7 +149,7 @@
     <section id="speakers" class="section-with-bg">
       <div class="container">
         <div class="section-header">
-          <h2 style="color: #191919">Active Team</h2>
+          <h2 style="color: #191919">Team in Action</h2>
         </div>
         <div class="row justify-content-center speaker-row" style="margin:auto">
 
