--- a/iccv25.html
+++ b/iccv25.html
@@ -427,29 +427,29 @@
             <div class="row agenda-item">
               <div class="col-md-3">- am</div>
               <div class="col-md-9">
-                <h4>keynote Speaker:</h4>
-                <p></p>
+                <h4>keynote Speaker: TBA</h4>
+                <p>TBA</p>
               </div>
             </div>
             <div class="row agenda-item">
               <div class="col-md-3">- am</div>
               <div class="col-md-9">
-                <h4>keynote Speaker:</h4>
-                <p></p>
+                <h4>keynote Speaker: TBA</h4>
+                <p>TBA</p>
               </div>
             </div>
             <div class="row agenda-item">
               <div class="col-md-3">- am</div>
               <div class="col-md-9">
-                <h4>keynote Speaker:</h4>
-                <p>  </p>
+                <h4>keynote Speaker: TBA</h4>
+                <p>TBA</p>
               </div>
             </div>
             <div class="row agenda-item">
               <div class="col-md-3">- am</div>
               <div class="col-md-9">
-                <h4>keynote Speaker:</h4>
-                <p></p>
+                <h4>keynote Speaker: TBA</h4>
+                <p>TBA</p>
               </div>
             </div>
           </div>
@@ -468,15 +468,32 @@
             <div class="row agenda-item">
               <!-- <div class="col-md-3">11:10-13:00 Hrs</div> -->
               <div class="col-md-12">
-    <p>
-      
-    </p>
+            <p>
+              TBA
+            </p>
               </div>
             </div>
           </div>
         </div>
 
     </div>
+
+    <div class="container">
+      <!-- <center>
+        <h5 id="dec-conf" style="font-weight: 200; color:#2b2b2b">Posters</h5>
+        </center> -->
+
+    <div class="tab-content row justify-content-center">
+      <div role="tabpanel" class="col-lg-9 tab-pane show active" id="day-1">
+        <h3 class="quote-style">Demo Session <span style="font-size: 0.6em;">Contact us to showcase your latest products and innovations</span></h3>
+           <center>
+            <img src="./25ICCV/company/hedra2.png" alt="Hedra" class="company-logo">
+           </center>
+      </div>
+    </div>
+
+</div>
+
   </section>
 
 
