--- a/iccv25.html
+++ b/iccv25.html
@@ -486,9 +486,11 @@
     <div class="tab-content row justify-content-center">
       <div role="tabpanel" class="col-lg-9 tab-pane show active" id="day-1">
         <h3 class="quote-style">Demo Session <span style="font-size: 0.6em;">Contact us to showcase your latest products and innovations</span></h3>
-           <center>
+        <div class="row agenda-item">
+          <center>
             <img src="./25ICCV/company/hedra2.png" alt="Hedra" class="company-logo">
-           </center>
+          </center>
+        </div>
       </div>
     </div>
 
