--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       <div id="logo" class="pull-left">
         <!-- Uncomment below if you prefer to use a text logo -->
         <!-- <h1><a href="#intro"><span></span></a></h1> -->
-        <a href="https://www.sbintuitions.co.jp/" class="scrollto"><img src="assets/img/logo-sb-intuitions.svg" alt="SB Intuitions" title=""></a>
+        <a href="https://www.sbintuitions.co.jp/" class="scrollto"><img src="assets/img/logo-sb-intuitions.png" alt="SB Intuitions" title=""></a>
         <a href="https://research.cyberagent.ai/" class="scrollto"><img src="assets/img/ca.png" alt="CyberAgent" title=""></a>
         <a href="https://www.kaist.ac.kr/en/" class="scrollto"><img src="assets/img/KAIST_logo_small.svg.png" alt="KAIST" title=""></a>
         <a href="https://www.ucmerced.edu/" class="scrollto"><img src="assets/img/UC_Merced_Seal.png" alt="UC Merced" title=""></a>
