--- a/iccv25.html
+++ b/iccv25.html
@@ -235,7 +235,7 @@
           </div>
 
           <div class="col-lg-4 col-md-6 col-sm-6" style="width:85%">
-            <a href="https://www.microsoft.com/en-us/research/people/mapoll/">
+            <a href="https://ibug.doc.ic.ac.uk/maja/">
               <div class="speaker">
                 <img src="./25ICCV/speakers/maja.jpg" alt="Maja Pantic" style="width: 100%;">
                 <div class="details">
@@ -314,7 +314,7 @@
                 <img src="assets/img/orgnizers/shk.jpg" alt="Shoukang Hu" style="width: 100%;">
                 <div class="details">
                   <h3>Shoukang Hu</h3>
-                  <p>Senior Researcher, Microsoft Research</p>
+                  <p>Senior Researcher, Microsoft Research Asia - Tokyo</p>
                 </div>
               </div>
             </a>
