--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                 <img src="assets/img/orgnizers/shk.jpg" alt="Shoukang Hu" style="width: 100%;">
                 <div class="details">
                   <h3>Shoukang Hu</h3>
-                  <p>Senior Researcher, Microsoft Research</p>
+                  <p>Senior Researcher, Microsoft Research Asia - Tokyo</p>
                 </div>
               </div>
             </a>
