--- a/iccv25.html
+++ b/iccv25.html
@@ -140,7 +140,7 @@
           <!-- <h3 class="quote-style-inv">Call for papers</h3> -->
           <p class="quote-style-inv" style="color: white">
         <b>CALL FOR PAPERS</b><br>
-         We will call for extended abstract submission of works already accepted by previous top conferences or unpublished works. 
+         We will call for extended abstract submission of works already accepted by previous top conferences or IJCV/TPAMI/TMLR. 
         Additionally, we will invite accepted papers from both the main conference (ICCV 2025) and the IJCV special issue on audio-visual generation for the presentations.
         </p>
 
@@ -275,7 +275,7 @@
                 <img src="assets/img/orgnizers/shiqi.jpg" alt="Shiqi Yang" style="width: 100%;">
                 <div class="details">
                   <h3>Shiqi Yang</h3>
-                  <p>Chief Research Scientist, SB Intuitions</p>
+                  <p>Chief Research Scientist, SB Intuitions, SoftBank</p>
                 </div>
               </div>
             </a>
