--- a/iccv25.html
+++ b/iccv25.html
@@ -488,6 +488,7 @@
         <h3 class="quote-style">Demo Session <span style="font-size: 0.6em;">Contact us to showcase your latest products and innovations</span></h3>
         <div class="row agenda-item">
           <center>
+		<a href="https://www.hedra.com/" target="_blank" rel="noopener noreferrer">
             <img src="./25ICCV/company/hedra2.png" alt="Hedra" class="company-logo">
           </center>
         </div>
