--- a/iccv25.html
+++ b/iccv25.html
@@ -140,7 +140,7 @@
           <!-- <h3 class="quote-style-inv">Call for papers</h3> -->
           <p class="quote-style-inv" style="color: white">
         <b>CALL FOR PAPERS</b><br>
-         We will call for extended abstract submission of works already accepted by previous top conferences or IJCV/TPAMI/TMLR. 
+         We will call for extended abstract submission of works already accepted by recent CVPR/ICCV/ECCV/ICML/ICLR/NeurIPS or IJCV/TPAMI/TMLR. 
         Additionally, we will invite accepted papers from both the main conference (ICCV 2025) and the IJCV special issue on audio-visual generation for the presentations.
         </p>
 
