--- a/ijcv25.html
+++ b/ijcv25.html
@@ -498,7 +498,7 @@
         <h3 style="color: white; text-decoration: underline;">Contact Us</h3>
         <p>
           <a href="mailto: thoh.kaist.ac.kr@gmail.com" style="color: white;">Tae-Hyun Oh</a> / 
-          <a href="mailto: shiqi.yang@sbintuitions.co.jp" style="color: white;">Shiqi Yang</a> / 
+          <a href="mailto: shiqi.yang147.jp@gmail.com" style="color: white;">Shiqi Yang</a> / 
           <a href="mailto: wangzx1994@gmail.com" style="color: white;">Zhixiang Wang</a> / 
           <a href="mailto: stulyakov@snap.com" style="color: white;">Sergey Tulyakov</a> / 
           <a href="mailto: stavros.petridis04@imperial.ac.uk" style="color: white;">Stavros Petridis:</a> / 
