--- a/iccv25.html
+++ b/iccv25.html
@@ -490,6 +490,12 @@
           <center>
 		<a href="https://www.hedra.com/" target="_blank" rel="noopener noreferrer">
             <img src="./25ICCV/company/hedra2.png" alt="Hedra" class="company-logo">
+	<a href="https://www.hedra.com/" target="_blank" rel="noopener noreferrer">
+      <img src="./25ICCV/company/hedra.png" alt="Hedra" class="company-logo">
+    </a>
+    <a href="https://deepmind.google/models/veo/" target="_blank" rel="noopener noreferrer">
+      <img src="./25ICCV/company/deepmind.png" alt="deepmind" class="company-logo">
+    </a>
           </center>
         </div>
       </div>
