--- a/iccv25.html
+++ b/iccv25.html
@@ -139,17 +139,17 @@
         <div class="tab-content row justify-content-left" data-aos-delay="700">
           <!-- <h3 class="quote-style-inv">Call for papers</h3> -->
           <p class="quote-style-inv" style="color: white">
-        <b>CALL FOR PAPERS</b><br>
+        <b>CALL FOR POSTERS</b><br>
          We will call for extended abstract submission of works <b>already accepted</b> by recent CVPR/ICCV/ECCV/ICML/ICLR/NeurIPS or IJCV/TPAMI/TMLR. 
         Additionally, we will invite accepted papers from both the main conference (ICCV 2025) and the IJCV special issue on audio-visual generation for the presentations.
         </p>
 
         <p class="quote-style-inv" style="color: white">
         <b>CALL FOR DEMOS</b><br>
-         We will also call for demos from the industry.
+         <span style="text-decoration: underline;">We will also call for demos from the industry.</span>
             </p>
             </div>
-
+	<b>Currently we do not accept industrial demos anymore.</b>
           
         <br>
 
