--- a/iccv25.html
+++ b/iccv25.html
@@ -146,10 +146,10 @@
 
         <p class="quote-style-inv" style="color: white">
         <b>CALL FOR DEMOS</b><br>
-         <span style="text-decoration: underline;">We will also call for demos from the industry.</span>
+         <del>We will also call for demos from the industry.</del> <b>Currently we do not accept industrial demos anymore.</b>
             </p>
             </div>
-	<b>Currently we do not accept industrial demos anymore.</b>
+	
           
         <br>
 
