--- a/iccv25.html
+++ b/iccv25.html
@@ -142,7 +142,7 @@
         <b>CALL FOR POSTERS</b><br>
          We will call for extended abstract submission of works <b>already accepted</b> by recent CVPR/ICCV/ECCV/ICML/ICLR/NeurIPS or IJCV/TPAMI/TMLR. 
         Additionally, we will invite accepted papers from both the main conference (ICCV 2025) and the IJCV special issue on audio-visual generation for the presentations.
-	Submit your poster in this <a href="https://docs.google.com/forms/d/e/1FAIpQLSc6s7nmeDK9W8X-a1MKqOdWWzXbKhuqS3bj2h-CphQ9cxCh_w/viewform?usp=header" target="_blank" rel="noopener">
+	Submit your poster in this <a href="https://docs.google.com/forms/d/e/1FAIpQLSc6s7nmeDK9W8X-a1MKqOdWWzXbKhuqS3bj2h-CphQ9cxCh_w/viewform?usp=header" style="color: red;" target="_blank" rel="noopener">
     Google Form
   </a>!
         </p>
