--- a/iccv25.html
+++ b/iccv25.html
@@ -418,9 +418,9 @@
           <!-- Schdule Day 1  -->
           <!-- Schdule Day 1  -->
           <div role="tabpanel" class="col-lg-9 tab-pane show active" id="day-1">
-            <h3 class="quote-style">Talk <span style="font-size: 0.6em;">Oct 22, 2025</span> </h3>
+            <h3 class="quote-style">Talk <span style="font-size: 0.6em;">Oct 20, 2025</span> </h3>
             <div class="row agenda-item">
-              <div class="col-md-3">- am</div>
+              <div class="col-md-3">1:00 pm - </div>
               <div class="col-md-9">
                 <h4>Organizers</h4>
               <p>Opening remarks</p>
@@ -428,28 +428,28 @@
               </div>
             </div>
             <div class="row agenda-item">
-              <div class="col-md-3">- am</div>
+              <div class="col-md-3">- pm</div>
               <div class="col-md-9">
                 <h4>keynote Speaker: TBA</h4>
                 <p>TBA</p>
               </div>
             </div>
             <div class="row agenda-item">
-              <div class="col-md-3">- am</div>
+              <div class="col-md-3">- pm</div>
               <div class="col-md-9">
                 <h4>keynote Speaker: TBA</h4>
                 <p>TBA</p>
               </div>
             </div>
             <div class="row agenda-item">
-              <div class="col-md-3">- am</div>
+              <div class="col-md-3">- pm</div>
               <div class="col-md-9">
                 <h4>keynote Speaker: TBA</h4>
                 <p>TBA</p>
               </div>
             </div>
             <div class="row agenda-item">
-              <div class="col-md-3">- am</div>
+              <div class="col-md-3">- pm</div>
               <div class="col-md-9">
                 <h4>keynote Speaker: TBA</h4>
                 <p>TBA</p>
@@ -488,7 +488,7 @@
 
     <div class="tab-content row justify-content-center">
       <div role="tabpanel" class="col-lg-9 tab-pane show active" id="day-1">
-        <h3 class="quote-style">Demo Session <span style="font-size: 0.6em;">Contact us to showcase your latest products and innovations</span></h3>
+        <h3 class="quote-style">Demo Session <span style="font-size: 0.6em;">Showcase the latest products and innovations</span></h3>
         <div class="row agenda-item">
           <center>
 		<a href="https://www.hedra.com/" target="_blank" rel="noopener noreferrer">
