--- a/iccv25.html
+++ b/iccv25.html
@@ -144,7 +144,7 @@
         Additionally, we will invite accepted papers from both the main conference (ICCV 2025) and the IJCV special issue on audio-visual generation for the presentations.
 	Submit your poster in this <a href="https://docs.google.com/forms/d/e/1FAIpQLSc6s7nmeDK9W8X-a1MKqOdWWzXbKhuqS3bj2h-CphQ9cxCh_w/viewform?usp=header" style="color: red;" target="_blank" rel="noopener">
     Google Form
-  </a>!
+  </a>! (There is no strict deadline for the submission, any time will do so long as we have enough poster stands available.)
         </p>
 
         <p class="quote-style-inv" style="color: white">
