--- a/iccv25.html
+++ b/iccv25.html
@@ -118,7 +118,7 @@
         <span style="color: #1d3163;"></span>
       </h1>
       <br>
-      <p id="sub-sub-heading" class="mb-2 pb-0">In Conjunction with ICCV 2025, Honolulu, USA</p>
+      <p id="sub-sub-heading" class="mb-2 pb-0">Oct 20 afternoon, in Conjunction with ICCV 2025, Honolulu, USA</p>
       <div>
         <a href="./index.html" class="about-btn-3" style="font-size: large;">Back to Main Page</a>
          <!-- <span style="font-size: large">  Past Event </span> -->
