Update affiliation of rodrigo

--- a/iccv25.html
+++ b/iccv25.html
@@ -303,7 +303,7 @@
                 <img src="assets/img/orgnizers/rm.jpeg" alt="Rodrigo Mira" style="width: 100%;">
                 <div class="details">
                   <h3>Rodrigo Mira</h3>
-                  <p>Postdoctoral Researcher, Meta</p>
+                  <p>Research Scientist, Google DeepMind</p>
                 </div>
               </div>
             </a>
