--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                 <img src="assets/img/orgnizers/rm.jpeg" alt="Rodrigo Mira" style="width: 100%;">
                 <div class="details">
                   <h3>Rodrigo Mira</h3>
-                  <p>Postdoctoral Researcher, Meta</p>
+                  <p>Research Scientist, Google Deepmind</p>
                 </div>
               </div>
             </a>
