--- a/iccv25.html
+++ b/iccv25.html
@@ -472,7 +472,7 @@
               <!-- <div class="col-md-3">11:10-13:00 Hrs</div> -->
               <div class="col-md-12">
             <p>
-              TBA
+              - How Would It Sound? Material-Controlled Multimodal Acoustic Profile Generation for Indoor Scenes (ICCV 2025). Mahnoor Fatima Saad, Ziad Al-Halah
             </p>
               </div>
             </div>
