--- a/iccv25.html
+++ b/iccv25.html
@@ -471,9 +471,21 @@
             <div class="row agenda-item">
               <!-- <div class="col-md-3">11:10-13:00 Hrs</div> -->
               <div class="col-md-12">
-            <p>
-              - How Would It Sound? Material-Controlled Multimodal Acoustic Profile Generation for Indoor Scenes (ICCV 2025). Mahnoor Fatima Saad, Ziad Al-Halah
-            </p>
+            <ul>
+            <li>
+              How Would It Sound? Material-Controlled Multimodal Acoustic Profile Generation for Indoor Scenes (ICCV 2025). 
+              Mahnoor Fatima Saad, Ziad Al-Halah
+            </li>
+            <li>
+              Audio-visual Controlled Video Diffusion with Masked Selective State Spaces Modeling for Natural Talking Head Generation (ICCV 2025). Fa-Ting Hong, Zunnan Xu, Zixiang Zhou, Jun Zhou, Xiu Li, Qin Lin, Qinglin Lu, Dan Xu.
+            </li>
+				<li>
+				AV-Flow: Transforming Text to Audio-Visual Human-like Interactions (ICCV 2025). Aggelina Chatziagapi, Louis-Philippe Morency, Hongyu Gong, Michael Zollhoefer, Dimitris Samaras, Alexander Richard.
+				</li>
+				<li>
+				TARO: Timestep-Adaptive Representation Alignment with Onset-Aware Conditioning for Synchronized Video-to-Audio Synthesis (ICCV 2025). Tri Ton, Ji Woo Hong, Chang D. Yoo.	
+				</li>
+          </ul>
               </div>
             </div>
           </div>
