--- a/iccv25.html
+++ b/iccv25.html
@@ -473,8 +473,7 @@
               <div class="col-md-12">
             <ul>
             <li>
-              How Would It Sound? Material-Controlled Multimodal Acoustic Profile Generation for Indoor Scenes (ICCV 2025). 
-              Mahnoor Fatima Saad, Ziad Al-Halah
+              How Would It Sound? Material-Controlled Multimodal Acoustic Profile Generation for Indoor Scenes (ICCV 2025). Mahnoor Fatima Saad, Ziad Al-Halah.
             </li>
             <li>
               Audio-visual Controlled Video Diffusion with Masked Selective State Spaces Modeling for Natural Talking Head Generation (ICCV 2025). Fa-Ting Hong, Zunnan Xu, Zixiang Zhou, Jun Zhou, Xiu Li, Qin Lin, Qinglin Lu, Dan Xu.
@@ -485,6 +484,9 @@
 				<li>
 				TARO: Timestep-Adaptive Representation Alignment with Onset-Aware Conditioning for Synchronized Video-to-Audio Synthesis (ICCV 2025). Tri Ton, Ji Woo Hong, Chang D. Yoo.	
 				</li>
+        <li>
+          Zero-AVSR: Zero-Shot Audio-Visual Speech Recognition with LLMs by Learning Language-Agnostic Speech Representations (ICCV 2025). Jeong Hun Yeo*, Minsu Kim*, Chae Won Kim, Stavros Petridis, and Yong Man Ro.
+        </li>
           </ul>
               </div>
             </div>
