--- a/iccv25.html
+++ b/iccv25.html
@@ -487,6 +487,10 @@
         <li>
           Zero-AVSR: Zero-Shot Audio-Visual Speech Recognition with LLMs by Learning Language-Agnostic Speech Representations (ICCV 2025). Jeong Hun Yeo*, Minsu Kim*, Chae Won Kim, Stavros Petridis, and Yong Man Ro.
         </li>
+				<li>What's Making That Sound Right Now? Video-centric Audio-Visual Localization (ICCV 2025). Hahyeon choi, Junhoo Lee, Nojun Kwak. </li>
+				<li> GaussianSpeech: Audio-Driven Personalized 3D Gaussian Avatars (ICCV 2025). Shivangi Aneja, Artem Sevastopolsky, Tobias Kirschstein, Justus Thies, Angela Dai, Matthias Nießner. </li>
+				<li>AURELIA: Test-time Reasoning Distillation in Audio-Visual LLMs (ICCV 2025). Sanjoy Chowdhury, Hanan Gani, Nishit Anand, Sayan Nag, Ruohan Gao, Mohamed Elhoseiny, Salman Khan, Dinesh Manocha.
+					
           </ul>
               </div>
             </div>
