--- a/iccv25.html
+++ b/iccv25.html
@@ -518,6 +518,20 @@
       </div>
     </div>
 
+    <div class="tab-content row justify-content-center">
+      <div role="tabpanel" class="col-lg-9 tab-pane show active" id="day-1">
+        <h3 class="quote-style">Sponsors <span style="font-size: 0.6em;"> </span></h3>
+        <div class="row agenda-item">
+          <center>
+		
+    <a href="https://www.abaka.ai/" target="_blank" rel="noopener noreferrer">
+      <img src="./25ICCV/sponsor/AbakaAI.jpg" alt="AbakaAI" class="company-logo">
+    </a>
+          </center>
+        </div>
+      </div>
+    </div>
+
 </div>
 
   </section>
