--- a/iccv25.html
+++ b/iccv25.html
@@ -525,7 +525,7 @@
           <center>
 		
     <a href="https://www.abaka.ai/" target="_blank" rel="noopener noreferrer">
-      <img src="./25ICCV/sponsor/AbakaAI.jpg" alt="AbakaAI" class="company-logo">
+      <img src="./25ICCV/sponsor/AbakaAI.jpg" alt="AbakaAI" class="company-logo" style="width:200px; height:auto;">
     </a>
           </center>
         </div>
