--- a/iccv25.html
+++ b/iccv25.html
@@ -237,19 +237,7 @@
             </a>
           </div>
 
-          <div class="col-lg-4 col-md-6 col-sm-6" style="width:85%">
-            <a href="https://ibug.doc.ic.ac.uk/maja/">
-              <div class="speaker">
-                <img src="./25ICCV/speakers/maja.jpg" alt="Maja Pantic" style="width: 100%;">
-                <div class="details">
-                  <h3>Maja Pantic</h3>
-                  <p>Professor, Imperial College London</p>
-                  <!-- <p>Leader, i·BUG group</p> -->
-                  <p style="color: rgb(0, 255, 0);">Tentative Speaker</p>
-                </div>
-              </div>
-            </a>
-          </div>
+          
 
           <div class="col-lg-4 col-md-6 col-sm-6" style="width:85%">
             <a href="https://ami.kaist.ac.kr/members/tae-hyun-oh">
@@ -490,7 +478,7 @@
 				<li>What's Making That Sound Right Now? Video-centric Audio-Visual Localization (ICCV 2025). Hahyeon choi, Junhoo Lee, Nojun Kwak. </li>
 				<li> GaussianSpeech: Audio-Driven Personalized 3D Gaussian Avatars (ICCV 2025). Shivangi Aneja, Artem Sevastopolsky, Tobias Kirschstein, Justus Thies, Angela Dai, Matthias Nießner. </li>
 				<li>AURELIA: Test-time Reasoning Distillation in Audio-Visual LLMs (ICCV 2025). Sanjoy Chowdhury, Hanan Gani, Nishit Anand, Sayan Nag, Ruohan Gao, Mohamed Elhoseiny, Salman Khan, Dinesh Manocha.
-					
+					<li>FLOAT: Generative Motion Latent Flow Matching for Audio-driven Talking Portrait (ICCV 2025). Taekyung Ki, Dongchan Min, Gyeongsu Chae.</li>
           </ul>
               </div>
             </div>
